[project]
name = "doco_meta_catalog"
authors = [{ name = "Doco México", email = "doco.mexico@gmail.com" }]
description = "Sync ERPNext Items into Meta Commerce Catalog (powers WhatsApp Catalog, Facebook Shop, Instagram Shopping)."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = ["requests"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
